# zhicli

./: .gitignore  01-task-breakdown.md  02-test-strategy.md  03-success-metrics.md  04-ux-improvements.md  05-improved-plan.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  nightly.yml  release.yml
docs/: index.md  tutorials-cn.md  use-cases-cn.md
docs/en/: architecture.md  comparison.md  index.md  install.md  tutorials.md  use-cases.md
docs/en/reference/: cli.md  config.md  skills.md  tools.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/zh/: architecture.md  comparison.md  index.md  install.md  tutorials.md  use-cases.md
docs/zh/reference/: cli.md  config.md  skills.md  tools.md
src/zhi/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  errors.py  files.py  i18n.py  keybindings.py  models.py  repl.py  ui.py  updater.py
src/zhi/skills/: __init__.py  loader.py  loader_md.py
src/zhi/skills/builtin/: analyze.yaml  compare.yaml  contract-review.yaml  daily-digest.yaml  extract-table.yaml  extract-text.yaml  invoice-to-excel.yaml  meeting-followup.yaml  meeting-notes.yaml  proofread.yaml  reformat.yaml  report-polish.yaml  summarize.yaml  translate-proofread.yaml  translate.yaml
src/zhi/skills/builtin/compare/: SKILL.md
src/zhi/skills/builtin/compare/references/: comparison-heuristics.md
src/zhi/skills/builtin/skill-creator/: SKILL.md
src/zhi/skills/builtin/skill-creator/references/: workflows.md
src/zhi/tools/: __init__.py  ask_user.py  base.py  file_list.py  file_read.py  file_write.py  ocr.py  shell.py  skill_create.py  skill_tool.py  web_fetch.py
tests/: conftest.py
tests/e2e/: test_boundary_validation.py  test_cli_e2e.py
tests/fixtures/api_responses/: chat_completion.json  ocr_response.json  tool_calls.json
tests/fixtures/files/: sample.txt
tests/fixtures/skills/: extra_fields.yaml  malformed_skill.yaml  minimal_skill.yaml  missing_fields.yaml  valid_skill.yaml
tests/unit/: test_agent.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_files.py  test_i18n.py  test_keybindings.py  test_repl.py  test_ui.py  test_updater.py
tests/unit/skills/: test_discovery.py  test_loader.py  test_loader_md.py
tests/unit/tools/: test_ask_user.py  test_base.py  test_disable_model_invocation_comparison.py  test_file_list.py  test_file_read.py  test_file_write.py  test_ocr.py  test_registry.py  test_shell.py  test_skill_create.py  test_skill_tool.py  test_web_fetch.py
